
 - ext:run-program looks into *standard-input/output* and *error-output* for handle
   duplication also under Win32.

 - FEtype_error_index() had format arguments in wrong order (M. Goffioul).

 - In the LOOP macro, variables are initialized with values of their type, no
   longer producing code like (LET ((C NIL)) (DECLARE (CHARACTER C)) ...)

 - The compiler now advertises itself with PROVIDE so that issuing (REQUIRE
   'CMP) twice does not cause the compiler to be loaded twice.

 - Fix error message of interpreted FFI:CLINES form (M. Goffioul).

 - Remove obsolete C::BUILD-ECL documentation (M. Goffioul).

* ANSI compatibility:

 - Several functions that signaled type-errors did not set the right values
   on the field TYPE-ERROR-EXPECTED-TYPE. We now use the following types:
	* valid function names => (SATISFIES EXT:VALID-FUNCTION-NAME-P)
	* proper list	       => PROPER-LIST = (OR (CONS T PROPER-LIST) NULL)
	* positive fixnum      => (INTEGER 0 MOST-POSITIVE-FIXNUM)
	* nonnegative integer  => (INTEGER 0 *)
	* index in a seq       => (INTEGER 0 L) where L is (1- (length sequence))

 - (COMPLEX *) is now recognized as valid type identifier by subtypep.

 - TYPE-OF now returns more precise type names, so that if (TYPE-OF x) = t1 and
   (TYPEP x t2) = T then (SUBTYPEP t1 t2) = T.

 - MAKE-PATHNAME now signals ordinary errors when the arguments do not have
   the required type, but signals a file error when it finds something like
   a wrong directory (i.e. '(:ABSOLUTE :UP)).

 - Pathnames which contain :BACK in the directory, now print as unreadable
   objects, instead of signaling an error when printing.

 - Declaration names cannot be used to define new type names and viceversa.

* New features:

 - Added function si:rmdir (M. Pasternacki)

 - There are now specialized arrays for 32 or 64 bits data, depending on the
   size of words in the platform.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***